<fix>: 修改一些基础样式

--- a/assets/css/variable.styl
+++ b/assets/css/variable.styl
@@ -93,6 +93,11 @@ $fontsize-medium = 14px
 $fontsize-small = 12px
 $fontsize-small-s = 10px
 
+// 字体
+$medium-font = 'PingFangSC-Medium', 'Microsoft Yahei'
+$regulor-font = 'PingFangSC-Regular', 'Microsoft Yahei'
+$light-font = 'PingFangSC-light', 'Microsoft Yahei'
 /// 内容区阴影
+
 $box-shadow-content = 0 1px 3px rgba(0, 0, 0, .1)
 $box-shadow-nav = 0 2px 3px rgba(0, 0, 0, .12)
