--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,3 +1,4 @@
+@import './reset.styl'
 @import './variable.styl'
 @import './icon.styl'
 
@@ -6,7 +7,7 @@ html, body
   // background-color: #fff;
   color: #2e2f30;
   letter-spacing: 0.5px;
-  font-family: "Source Sans Pro", Arial, sans-serif;
+  // font-family: $light-font;
   height: 100vh;
   margin: 0;
 }
@@ -18,9 +19,10 @@ footer
   border-top: 1px solid #ddd;
 }
 
-a, a:hover, a:focus, a:visited
+a, a:hover, a:focus
 {
   color: $color-light-pink;
+  font-weight: 100;
 }
 
 .page-enter-active, .page-leave-active
