<fix>: 修复直接名单页取不到member默认值

--- a/assets/css/variable.styl
+++ b/assets/css/variable.styl
@@ -94,9 +94,9 @@ $fontsize-small = 12px
 $fontsize-small-s = 10px
 
 // 字体
-$medium-font = 'PingFangSC-Medium', 'Microsoft Yahei'
-$regulor-font = 'PingFangSC-Regular', 'Microsoft Yahei'
-$light-font = 'PingFangSC-light', 'Microsoft Yahei'
+$medium-font = PingFang SC, Microsoft Yahei
+$regulor-font = PingFang SC, Microsoft Yahei
+$light-font = PingFang SC, Microsoft Yahei
 /// 内容区阴影
 
 $box-shadow-content = 0 1px 3px rgba(0, 0, 0, .1)
