<feat>: 更换全局默认字体

--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -7,7 +7,7 @@ html, body
   // background-color: #fff;
   color: #2e2f30;
   letter-spacing: 0.5px;
-  // font-family: $light-font;
+  font-family: $regulor-font;
   height: 100vh;
   margin: 0;
 }
