<feat>: 新增聚会信息+修改图标样式

--- a/assets/css/icon.styl
+++ b/assets/css/icon.styl
@@ -295,8 +295,8 @@
 // .mfic-form-site:before
 //   content: "\e65e"
 
-// .mfic-time:before
-//   content: "\e65f"
+.mfic-time:before
+  content: "\e65f"
 
 // .mfic-second-type-change:before
 //   content: "\e660"
